fixed alignment issue

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -16,16 +16,3 @@ body{
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
-form *{
-    font-family: 'Poppins',sans-serif;
-    color: #000000;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-}
-form h2{
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-}
